Initial commit: Added all project files (data, src, notebooks, etc.)

--- a/Notebook/sample.ipynb
+++ b/Notebook/sample.ipynb
@@ -9,30 +9,22 @@
    "source": [
     "import os\n",
     "import sys\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import missingno as msno\n",
+    "# Add parent directory to sys.path for module import\n",
     "path = os.path.abspath('../')\n",
-    "print(path)\n",
     "if path not in sys.path:\n",
-    "    sys.path.append(path)"
+    "    sys.path.append(path)\n",
+    "print(f\"Module path: {path}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ebb663ae",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'src'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m get_ipython().run_line_magic(\u001b[33m'\u001b[39m\u001b[33mload_ext\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mautoreload\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      2\u001b[39m get_ipython().run_line_magic(\u001b[33m'\u001b[39m\u001b[33mautoreload\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33m2\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msrc\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mdata\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m DataPreprocessor\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'src'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -56,10 +48,183 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = dp.load_data('../data/Diabetes Missing Data.csv')\n",
-    "data = dp.handle_missing_values(data)\n",
-    "data\n",
+    "data = dp.load_data('../data/Diabetes Missing Data.csv')  # Replace with your file path\n",
+    "display(data.head())  # Display first 5 rows in Jupyter\n",
+    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6936fb77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# ------------------  Check data info ------------------\n",
+    "dp.check_data_info(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c77e736a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"\\n📊 Missing Values Before Handling\")\n",
+    "msno.matrix(data)\n",
+    "plt.title(\"Missing Data Matrix (Before Handling)\")\n",
+    "plt.show()\n",
+    "msno.heatmap(data)\n",
+    "plt.title(\"Missing Data Correlation Heatmap (Before Handling)\")\n",
+    "plt.show()\n",
+    "msno.bar(data)\n",
+    "plt.title(\"Missing Data Bar Chart (Before Handling)\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27283e58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ------------------ 3 Handle missing values ------------------\n",
+    "data = dp. handle_missing_values(data)\n",
+    "display(data.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6c43a7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ------------------ 4️ Remove duplicates ------------------\n",
+    "data = dp.remove_duplicates(data)\n",
+    "display(data.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cabf9893",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ------------------5️ Detect and cap outliers ------------------\n",
+    "data = dp.detect_and_cap_outliers(data)\n",
+    "display(data.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "391e87c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ------------------6️ Feature engineering ------------------\n",
+    "data = dp.feature_engineering(data)\n",
+    "display(data.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0973cc6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ------------------ 7️ Encode categorical variables ------------------\n",
+    "data = dp.encode_categorical(data)\n",
+    "display(data.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "456c44cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ------------------ 8️ Scale features ------------------\n",
+    "data = dp.scale_features(data)\n",
+    "display(data.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8548e06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ------------------ 9️ Feature selection ------------------\n",
+    "data = dp.select_features(data, k=8)\n",
+    "display(data.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed6a4554",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ------------------ 1️0 Apply PCA ------------------\n",
+    "data = dp.apply_pca(data, n=6)\n",
+    "display(data.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8df3373c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ------------------ 1️1 Handle class imbalance ------------------\n",
+    "\n",
+    "print(\"\\n⚖️ Class Balance Before SMOTE\")\n",
+    "plt.figure(figsize=(6,4))\n",
+    "sns.countplot(data=data, x='Class', palette='viridis')\n",
+    "plt.title(\"Class Distribution Before SMOTE\")\n",
+    "plt.xlabel(\"Class\")\n",
+    "plt.ylabel(\"Count\")\n",
+    "plt.show()\n",
+    "data = dp.handle_imbalance(data)\n",
+    "display(data.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "add73a98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ------------------  Final dataset ------------------\n",
+    "print(f\"Final shape: {data.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "909ba51d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_dir = \"../data/cleaned\"\n",
+    "os.makedirs(output_dir, exist_ok=True)\n",
+    "output_path = os.path.join(output_dir, \"Cleaned_Diabetes.csv\")\n",
+    "data.to_csv(output_path, index=False)\n",
+    "print(f\"✅ Cleaned data saved to: {output_path}\")\n",
+    "print(f\"Final shape: {data.shape}\")"
    ]
   }
  ],
@@ -79,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.9"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
